// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Status should not render the badge if showConnectedStatus is false 1`] = `
<div>
  <button
    class="mm-box multichain-badge-status pr-1 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-transparent"
    data-testid="multichain-badge-status"
  >
    <div
      class="mm-box mm-badge-wrapper mm-box--display-inline-block"
    >
      <div
        class="shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8 flex"
      >
        <img
          alt="maskicon"
          height="32"
          src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
          width="32"
        />
      </div>
      <div
        class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
      />
    </div>
  </button>
</div>
`;

exports[`Badge Status should render correctly 1`] = `
<div>
  <button
    class="mm-box multichain-badge-status pr-1 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-transparent"
    data-testid="multichain-badge-status"
  >
    <div>
      <div
        aria-describedby="tippy-tooltip-1"
        class=""
        data-original-title="Not Connected"
        data-tooltipped=""
        style="display: flex;"
        tabindex="0"
      >
        <div
          class="mm-box mm-badge-wrapper mm-box--display-inline-block"
        >
          <div
            class="shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8 flex"
          >
            <img
              alt="maskicon"
              height="32"
              src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
              width="32"
            />
          </div>
          <div
            class="mm-box mm-badge-wrapper__badge-container"
            style="bottom: -4%; right: -12%;"
          >
            <div
              class="mm-box multichain-badge-status__badge multichain-badge-status__badge-not-connected mm-box--background-color-background-default mm-box--rounded-full mm-box--border-color-success-default mm-box--border-width-2 box--border-style-solid"
            />
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;
